[gd_scene load_steps=11 format=3 uid="uid://ce5teql2o7i46"]

[ext_resource type="Script" uid="uid://c8prl4ol43sr0" path="res://scripts/fase_3_1.gd" id="1_sucmx"]
[ext_resource type="Texture2D" uid="uid://d4fb34s5wwsfu" path="res://assets/backgrounds/background.png" id="2_o2ejq"]
[ext_resource type="Texture2D" uid="uid://bmxeirivvp3th" path="res://assets/btn.png" id="3_6hvsu"]
[ext_resource type="Texture2D" uid="uid://cbx21x5lk1f2n" path="res://assets/explicacao.png" id="4_4hfmq"]
[ext_resource type="AudioStream" uid="uid://dlfim2ja4ogdy" path="res://assets/audios/Som-de-clique-de-mouse-Efeito-Sonoro.ogg" id="4_x326k"]
[ext_resource type="Texture2D" uid="uid://b520fpjml6888" path="res://assets/continuar.png" id="5_8biyr"]
[ext_resource type="Texture2D" uid="uid://cx14roj74te3j" path="res://assets/fase1.png" id="6_y6nq2"]
[ext_resource type="Texture2D" uid="uid://djc11docrhhm3" path="res://assets/image.png" id="7_oqrn8"]
[ext_resource type="Texture2D" uid="uid://p4jhd6e5nf76" path="res://assets/recomecar.png" id="8_8biyr"]
[ext_resource type="Texture2D" uid="uid://twjen3dx846u" path="res://assets/seta2.png" id="9_y6nq2"]

[node name="Fase31" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sucmx")

[node name="fundo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_o2ejq")

[node name="explicacao_inicial_container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="explicacao" type="TextureRect" parent="explicacao_inicial_container"]
layout_mode = 0
offset_left = 442.0
offset_top = 38.0
offset_right = 724.0
offset_bottom = 110.0
texture = ExtResource("3_6hvsu")

[node name="TextureRect" type="TextureRect" parent="explicacao_inicial_container/explicacao"]
layout_mode = 0
offset_left = 20.0
offset_top = 4.0
offset_right = 253.0
offset_bottom = 49.0
texture = ExtResource("4_4hfmq")

[node name="texto_label" type="TextureRect" parent="explicacao_inicial_container"]
layout_mode = 0
offset_left = 432.0
offset_top = 264.0
offset_right = 739.0
offset_bottom = 299.0

[node name="button_continuar" type="TextureButton" parent="explicacao_inicial_container"]
layout_mode = 0
offset_left = 454.0
offset_top = 477.0
offset_right = 712.0
offset_bottom = 547.0
texture_normal = ExtResource("3_6hvsu")

[node name="TextureRect" type="TextureRect" parent="explicacao_inicial_container/button_continuar"]
layout_mode = 0
offset_left = 46.0
offset_top = 4.0
offset_right = 216.0
offset_bottom = 44.0
texture = ExtResource("5_8biyr")

[node name="fase1_label" type="TextureRect" parent="explicacao_inicial_container"]
layout_mode = 0
offset_left = 11.0
offset_top = 29.0
offset_right = 269.0
offset_bottom = 99.0
texture = ExtResource("3_6hvsu")

[node name="TextureRect" type="TextureRect" parent="explicacao_inicial_container/fase1_label"]
layout_mode = 0
offset_left = 56.0
offset_top = 9.0
offset_right = 196.0
offset_bottom = 49.0
texture = ExtResource("6_y6nq2")

[node name="Image" type="Sprite2D" parent="explicacao_inicial_container"]
position = Vector2(575, 283)
scale = Vector2(1.045679, 1.3285714)
texture = ExtResource("7_oqrn8")

[node name="explicacao_etapa_container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="button_iniciar" type="TextureButton" parent="explicacao_etapa_container"]
layout_mode = 0
offset_left = 466.0
offset_top = 473.0
offset_right = 724.0
offset_bottom = 543.0
texture_normal = ExtResource("3_6hvsu")

[node name="TextureRect" type="TextureRect" parent="explicacao_etapa_container/button_iniciar"]
layout_mode = 0
offset_left = 46.0
offset_top = 7.0
offset_right = 216.0
offset_bottom = 47.0
texture = ExtResource("5_8biyr")

[node name="fase1_label" type="TextureRect" parent="explicacao_etapa_container"]
layout_mode = 0
offset_left = 13.0
offset_top = 29.0
offset_right = 271.0
offset_bottom = 99.0
texture = ExtResource("3_6hvsu")

[node name="TextureRect" type="TextureRect" parent="explicacao_etapa_container/fase1_label"]
layout_mode = 0
offset_left = 50.0
offset_top = 7.0
offset_right = 190.0
offset_bottom = 47.0
texture = ExtResource("6_y6nq2")

[node name="titulo_label" type="TextureRect" parent="explicacao_etapa_container"]
layout_mode = 0
offset_left = 431.0
offset_top = 36.0
offset_right = 735.0
offset_bottom = 106.0
texture = ExtResource("3_6hvsu")

[node name="TextureRect" type="TextureRect" parent="explicacao_etapa_container/titulo_label"]
layout_mode = 0
offset_left = 36.0
offset_top = 8.0
offset_right = 269.0
offset_bottom = 53.0
texture = ExtResource("4_4hfmq")

[node name="imagem_etapa" type="TextureRect" parent="explicacao_etapa_container"]
layout_mode = 0
offset_left = 48.0
offset_top = 104.0
offset_right = 88.0
offset_bottom = 127.0

[node name="exercicio_container" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="tipo_energia_img" type="TextureRect" parent="exercicio_container"]
layout_mode = 0
offset_left = 296.0
offset_top = 24.0
offset_right = 554.0
offset_bottom = 94.0

[node name="itens_container" type="Control" parent="exercicio_container"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="item_1" type="TextureButton" parent="exercicio_container/itens_container"]
layout_mode = 0
offset_left = 72.0
offset_top = 392.0
offset_right = 112.0
offset_bottom = 432.0

[node name="item_2" type="TextureButton" parent="exercicio_container/itens_container"]
layout_mode = 0
offset_left = 368.0
offset_top = 368.0
offset_right = 408.0
offset_bottom = 408.0

[node name="item_3" type="TextureButton" parent="exercicio_container/itens_container"]
layout_mode = 0
offset_left = 752.0
offset_top = 368.0
offset_right = 792.0
offset_bottom = 408.0

[node name="feedback_label" type="Label" parent="exercicio_container"]
layout_mode = 0
offset_left = 512.0
offset_top = 296.0
offset_right = 552.0
offset_bottom = 319.0

[node name="button_restart" type="TextureButton" parent="exercicio_container"]
layout_mode = 0
offset_left = 822.0
offset_top = 55.0
offset_right = 1080.0
offset_bottom = 125.0
texture_normal = ExtResource("8_8biyr")

[node name="button_continuar" type="TextureButton" parent="exercicio_container"]
layout_mode = 0
offset_left = 822.0
offset_top = 55.0
offset_right = 1080.0
offset_bottom = 125.0
texture_normal = ExtResource("3_6hvsu")

[node name="TextureRect" type="TextureRect" parent="exercicio_container/button_continuar"]
layout_mode = 0
offset_left = 48.0
offset_top = 8.0
offset_right = 218.0
offset_bottom = 48.0
texture = ExtResource("5_8biyr")

[node name="seta_1" type="TextureRect" parent="exercicio_container"]
visible = false
layout_mode = 0
offset_left = -274.0
offset_top = 148.0
offset_right = 806.0
offset_bottom = 755.0
texture = ExtResource("9_y6nq2")

[node name="seta_2" type="TextureRect" parent="exercicio_container"]
visible = false
layout_mode = 0
offset_left = 51.0
offset_top = 160.0
offset_right = 1131.0
offset_bottom = 767.0
texture = ExtResource("9_y6nq2")

[node name="label_vitoria" type="Label" parent="."]
layout_mode = 0
offset_left = 496.0
offset_top = 296.0
offset_right = 536.0
offset_bottom = 319.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_x326k")

[node name="Narracao" type="AudioStreamPlayer2D" parent="."]
